labs/network-policy/solution/apod/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apod
  labels: 
    kubernetes.courselabs.co: network-policy
